--- a/style.css
+++ b/style.css
@@ -82,3 +82,220 @@ nav {
 .animation-reveal {
   animation: curtain 0.5s ease;
 }
+
+
+
+@keyframes curtain {
+  0% {
+    height: 0;
+    transform: translateY(-5em);
+  }
+  100% {
+    height: 100%;
+    transform: translateY(0);
+  }
+}
+
+#links-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  /* margin: 0 1em; */
+  transition: all .3s ease-in-out;
+  display: none;
+}
+
+ul,
+li {
+  list-style-type: none;
+}
+
+.nav-links a {
+  text-decoration: none;
+  color: rgb(87, 82, 81);
+}
+
+.nav-links {
+  font-size: 1.2em;
+  padding: 0.5em 0;
+}
+
+/* styling the slide show */
+
+.slideshow-container {
+  /* max-width: 100%; */
+  height: 35em;
+  position: relative;
+  /* margin: 0 auto; */
+  overflow: hidden;
+  /* border-radius: 10px; */
+}
+
+.slideshow-wrapper {
+  width: 100%;
+  display: flex;
+  transition: all .3s ease-in-out;
+  animation: slide 15s infinite ease;
+}
+
+.slide-description {
+  height: 7em;
+  width: 28em;
+  font-size: 1em;
+  padding: 2em 1em;
+  background-color: #faf9f674;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  border-radius: 0 24px 0 0;
+  color: #202324;
+}
+
+.slide-images {
+  position: relative;
+  object-fit: cover;
+  object-position: center;
+  max-width: 100%;
+}
+
+/* .slide-text {
+  height: 3.55em;
+  width: 26.7em;
+  position: absolute;
+  z-index: 1;
+  top: 40%;
+  color: white;
+  background-color: rgba(255, 99, 71, 0.56);
+  border-radius: 0 0 10px 10px;
+} */
+
+/* .cart-container {
+  position: absolute;
+  z-index: 1;
+  right: 0;
+}  */
+.cart-items-container {
+  background-color: rgba(255, 255, 255, 0.991);
+  position: fixed;
+  z-index: 2;
+  top: 3.5em;
+  right: -80%;
+  width: 18em;
+  height: 70lvh;
+  overflow: scroll;
+  border-radius:0 0 0 10px;
+  box-shadow: 6px 8px 16px grey;
+  transform: scale(0.5);
+  transition: all .5s ease-in-out;
+
+  
+  
+}
+.cart-show {
+  right: -1%;
+  transform: rotateY('0');
+  transform: scale(1);
+}
+
+.cart-items {
+  padding: .5em;
+  margin: .3em 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: .5em;
+  align-items: center;
+  box-shadow: 1px 1px 4px grey;
+  img {
+    width: 4em;
+    max-width: 100%;
+    height: 3em;
+    border-radius: 10px;
+    object-fit: cover;
+    object-position: center;
+  }
+  p {
+    height: 3em;
+    width: 8em;
+    font-size: .7em;
+  }
+}
+
+.cart-control-container {
+  display: inline-block;
+  display: flex;
+  justify-content: space-between;
+  padding: .5em;
+
+  button {
+    width: 7em;
+    border: none;
+    font-size: 1.2em;
+    padding: .5em;
+    border-radius: 14px;
+    box-shadow: 2px 2px 8px #cfcbcb;
+
+  }
+}
+
+
+
+.cart-buttons-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  button {
+    all: unset;
+    font-size: 1em;
+    font-weight: 800;
+    background-color: tomato;
+    color: white;
+    padding: .3em;
+    border-radius: 50%;
+    box-shadow: 2px 2px 6px grey;
+    transition: all .1s ease;
+
+  }
+
+  button:hover {
+    transform: translateY(-2px);
+    box-shadow: 4px 4px 8px grey;
+    background-color: white;
+    color: tomato;
+    border: 1px solid tomato;
+  }
+  button:active {
+    transform: translateY(1px);
+    
+  }
+
+  span {
+    font-size: 1.3em;
+    padding: .1em;
+  }
+}
+
+/* styling the title header */
+.first-heading-wrapper {
+  margin: 2em 0;
+  text-align: center;
+  margin-bottom: 1.5em;
+}
+
+.first-heading {
+  font-size: 3.5em;
+}
+
+#first-heading::after {
+  content: "";
+  display: block;
+  width: 250px;
+  height: 5px;
+  background-color: tomato;
+  border-radius: 10px;
+  margin: 10px 0;
+  position: absolute;
+  right: 50%;
+  left: 50%;
+  transform: translate(-50%);
+}
