--- a/style.css
+++ b/style.css
@@ -299,3 +299,405 @@ li {
   left: 50%;
   transform: translate(-50%);
 }
+
+
+/* animation specifically for the slideshow */
+
+@keyframes slide {
+  0% {
+    transform: translateX(+2%);
+  }
+  20% {
+    transform: translateX(0);
+  }
+  30% {
+    transform: translateX(-100%);
+  }
+  35% {
+    transform: translateX(-100%);
+  }
+  45% {
+    transform: translateX(-100%);
+  }
+  55% {
+    transform: translateX(-200%);
+  }
+  65% {
+    transform: translateX(-200%);
+  }
+
+  75% {
+    transform: translateX(-200%);
+  }
+  85% {
+    transform: translateX(-300%);
+  }
+  90% {
+    transform: translateX(-300%);
+  }
+  100% {
+    transform: translateX(-300%);
+  }
+}
+
+.categories-select {
+  padding: 1em;
+}
+
+.categories-header h2 {
+  font-size: 1.5em;
+  padding-left: 0.2em;
+  margin-bottom: 0.5em;
+}
+
+.filter-btn {
+  all: unset;
+  display: inline-block;
+  width: 3.8em;
+  font-size: 1.1em;
+  padding: .2em .8em;
+  background-color: #e8f2f8;
+  text-align: center;
+  border: 4px dotted #9ed5f2;
+  border-radius: 14em;
+  margin: .4em .2em;
+  box-shadow: 2px 4px 8px grey;
+}
+
+.filter-btn:focus {
+  transform: translateY(-4px);
+  color: tomato;
+  border: 4px dotted tomato;
+  transition: all 0.3s ease;
+}
+
+#items-container {
+  margin: 1em;
+  justify-items: center;
+  /* justify-content: center; */
+  display: grid;
+  gap: 2em;
+  overflow: visible;
+}
+
+.box {
+  width: 20em;
+  background-color: #faf9f6;
+  position: relative;
+  margin-bottom: 1em;
+  padding: .5em;
+  border-radius: 24px;
+  box-shadow: 2px 4px 16px #cfcbcb;
+  overflow: visible;
+  transition: all .3s ease;
+  animation: product-reveal .3s ease-in forwards;
+
+  h2 {
+    font-size: 1em;
+    letter-spacing: 2px;
+    font-weight: 600;
+  }
+
+}
+
+.box:hover {
+  box-shadow: 6px 8px 12px 
+            4px grey;
+  cursor: pointer;
+  overflow: visible;
+}
+
+@keyframes product-reveal {
+  0% {transform: rotateZ(45deg) scale(0.2);}
+  100% {transform: rotateZ(0deg) scale(1);}
+}
+
+.box-title {
+  color: black;
+  margin: 0.5em 0;
+  /* padding: .5em 0; */
+  /* height: 3em; */
+}
+
+/* .box::after {
+    content:"";
+    display: inline-block;
+    width: 25em;
+    height: 5px;
+    background-color: tomato;
+} */
+
+.product-img {
+  /* margin: 0 auto; */
+  display: inline-block;
+
+  max-width: 100%;
+  width: 20em;
+  height: 18em;
+  min-height: 12em;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 14px;
+}
+
+.product-info {
+    font-size: 0.8em;
+}
+
+.buttons-container {
+  margin-top: 1em;
+  padding: 0.2em;
+  display: flex;
+  justify-content: space-between;
+  gap: 0.5em;
+  align-items: center;
+}
+
+.buttons-wrapper {
+  min-width: 10em;
+  max-width: 15em;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+/* styling the buttons */
+.product-btn {
+  width: 100px;
+  border: none;
+  display: inline-block;
+  padding: 0.3em;
+  font-size: 1.2em;
+  border-radius: 14px;
+  box-shadow: 2px 2px 8px #cfcbcb;
+  transition: all .3s ease-in-out;
+}
+
+.product-btn:hover {
+  transform: translateY(-2px) scale(1.05);
+  font-weight: 500;
+  box-shadow: 2px 4px 8px #cfcbcb;
+
+}
+
+.price {
+  font-size: 2.5em;
+  font-weight: 600;
+  margin-right: 0.5em;
+}
+
+.buy-btn {
+  background-color: #e8e3e3;
+  margin-right: 0.5em;
+}
+
+.cart-btn {
+  background-color: #9ed5f2;
+}
+
+.bx-cart-plus {
+  transform: scale(1.3);
+}
+
+.bx-share {
+  font-size: 1.6em;
+  height: 1em;
+  /* margin-right: 2em; */
+}
+
+.heart {
+  display: inline-block;
+}
+
+.bx-heart {
+  font-size: 2.5em;
+  color: tomato;
+  position: absolute;
+  z-index: 1;
+  right: 5%;
+  margin: 0.2em;
+  padding: 0.1em;
+  background-color: white;
+  border-radius: 50%;
+}
+
+/* styling the attestation section of the page */
+
+.attest-container {
+  background-color: rgb(251, 201, 192);
+  display: flex;
+  height: 55em;
+  flex-direction: column-reverse;
+  justify-content: space-around;
+  margin: 2em 0;
+}
+
+.attest-img-wrapper {
+  margin: 0 auto;
+  position: relative;
+  z-index: 0;
+}
+.attest-text-wrapper {
+  padding: 1em;
+}
+/* 
+.attest-img {
+    display: inline-block;
+    width: 33em;
+    max-width: 100%;
+    height: 20em;
+    object-fit: cover;
+
+} */
+.attest-img {
+  width: 18em;
+  height: 15em;
+  border-radius: 24px;
+}
+
+.attest-side-img {
+  width: 6em;
+  height: 6em;
+  position: absolute;
+  border-radius: 24px;
+}
+
+.side-img1 {
+  z-index: -1;
+  left: -16%;
+  top: -10%;
+}
+
+.side-img2 {
+  width: 7em;
+  height: 7em;
+  z-index: 2;
+  bottom: -20%;
+  right: -15%;
+}
+
+.side-img3 {
+  z-index: 3;
+  left: -16%;
+  bottom: -10%;
+}
+
+.attest-heading {
+  font-size: 2em;
+  margin-bottom: 0.5em;
+}
+.attest-description {
+  margin-bottom: 1em;
+}
+
+.attest-list-container li {
+  margin: 1em 0;
+  padding: 0.5em;
+  display: flex;
+}
+
+.bx-certification {
+  font-size: 2em;
+  margin-right: 0.5em;
+}
+
+.menu-btn {
+  all: unset;
+  background-color: #cfcbcb;
+  font-size: 1.3em;
+  padding: 0.5em;
+  border-radius: 24px;
+  text-align: center;
+}
+
+.chef-area-container {
+  margin: 0  1em;
+}
+
+.chef-area-wrapper {
+  position: relative;
+  /* width: 100vw; */
+  padding: 1em;
+  /* height: 40em; */
+  display: flex;
+  justify-content: center;
+}
+
+.chef-element {
+  display: flex;
+  flex-direction: column;
+  width: 15em;
+  /* height: 29em; */
+  overflow: hidden;
+  border-radius: 24px;
+  background-color: #E4DFDA;
+  padding: .5em;
+  box-shadow: 2px 4px 8px gray;
+  transition: width .3s ease, margin-bottom .3s ease;
+  /* margin: 1em 0; */
+
+  img {
+    height: 20em;
+    max-width: 100%;
+    object-fit: cover;
+    border-radius: 14px;
+  }
+}
+
+.chef-info {
+  height: 1.7em;
+  width: 15em;
+  overflow: hidden;
+  padding: .5em;
+  transition: height .6s ease;
+}
+
+.chef-area-wrapper {
+  display: flex;
+  align-items: flex-start;
+}
+
+.chef-element:not(:hover) {
+  align-self: flex-start;
+}
+
+.chef-element:hover  {
+  width: 35em;
+  margin-bottom: 4em;
+  overflow: visible;
+  box-shadow: 8px 12px 12px grey;
+  z-index: 1;
+}
+
+.chef-element:hover .chef-info {
+  height: 8em;
+}
+
+.chef-area-title {
+  text-align: center;
+  font-size: 2.5em;
+  margin: 1em 0;
+  
+}
+
+.categories-wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1em;
+  justify-content: center;
+
+  p {
+    text-align: center;
+  }
+}
+
+.categories-item {
+  /* width: 10em; */
+  /* height: 10em; */
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  transition: all 0.5s;
+}
