--- a/style.css
+++ b/style.css
@@ -701,3 +701,68 @@ li {
   flex-direction: column;
   transition: all 0.5s;
 }
+
+.category-img {
+  display: inline-block;
+  max-width: 100%;
+  width: 8em;
+  height: 8em;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-bottom: 0.5em;
+  box-shadow: 8px 12px 10px grey;
+}
+
+.categories-item:hover > .cat-btn {
+  display: block;
+  transition: all 1s ease-in;
+  animation: reveal 1s;
+}
+
+.categories-item:hover > .cat-img-shade {
+  filter: blur(1px);
+}
+
+.cat-img-shade {
+  position: relative;
+  z-index: 0;
+  transition: all 0.5s;
+}
+
+.cat-btn {
+  display: inline-block;
+  position: absolute;
+  font-size: 1em;
+  /* z-index: 1; */
+  /* right: 25%;
+    bottom: 40%; */
+  padding: 0.5em;
+  border: none;
+  box-shadow: 2px 4px 10px grey;
+  background-color: rgba(255, 99, 71, 0.545);
+  border-radius: 10px;
+  display: none;
+  transition: all 1s;
+}
+
+@keyframes reveal {
+  0% {
+    transform: translateY(30px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+/* hover effect for various components */
+a {
+  transition: all 0.4s;
+  border-radius: 4px;
+  padding: 0.4em 0.5em;
+}
+
+a:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-bottom: 2px solid tomato;
+  background: rgba(255, 255, 255, 0.533);
+}
