--- a/style.css
+++ b/style.css
@@ -766,3 +766,123 @@ a:hover {
   border-bottom: 2px solid tomato;
   background: rgba(255, 255, 255, 0.533);
 }
+
+
+
+
+/**************** *********************/
+
+/* for tablet view */
+@media (min-width: 768px) {
+  #menu-btn,
+  #cancel-btn {
+    display: none;
+  }
+
+  .hidden {
+    display: block;
+  }
+
+  nav {
+    /* width: 100vw; */
+    position: unset;
+    display: flex;
+    justify-content: center;
+    padding: 0 1em;
+    background-color: white;
+    color: tomato;
+    border-radius: 0 0 0 0;
+  }
+
+  #links-container {
+    width: 18em;
+    display: inline-block;
+    align-items: center;
+    display: flex;
+    /* justify-content: space-between; */
+    flex-direction: row;
+    font-size: 1.3rem;
+    
+    margin: 0 10em ;
+  }
+
+  .nav-links {
+    padding: 0.5em;
+  }
+
+  .socials {
+    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .cart-container {
+    position: fixed;
+    z-index: 2;
+    right: 0;
+    padding: 0 0.5em;
+  }
+
+  .slideshow-container {
+    max-width: 100%;
+    height: 40em;
+    margin: 0 auto;
+  }
+
+  .box {
+    width: 18em;
+  }
+
+  #items-container {
+    margin: 1em;
+    display: grid;
+    grid-template-columns: repeat(3, 3fr);
+    gap: 1em;
+    align-content: center;
+  }
+  .product-img {
+    height: 15em;
+  }
+
+  .buttons-container {
+    flex-direction: row;
+  }
+
+  .attest-container {
+    display: flex;
+    height: 33em;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2em;
+  }
+
+  .attest-text-wrapper {
+    padding: 1em;
+    width: 23em;
+  }
+
+  .categories-wrapper {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 3em 2em;
+  }
+
+  .category-img {
+    width: 18em;
+    height: 10em;
+    gap: 2em;
+  }
+
+  .cart-items-container {
+    top: 3.8%;
+  }
+}
+
+/* @media (min-width: 1024px) {
+  
+  #links-container {
+    justify-content: flex-start;
+  }
+
+} */
