--- a/style.css
+++ b/style.css
@@ -531,7 +531,7 @@ li {
 /* styling the attestation section of the page */
 
 .attest-container {
-  background-color: rgb(251, 201, 192);
+  background-color: rgb(229, 120, 101);;
   display: flex;
   height: 55em;
   flex-direction: column-reverse;
