--- a/style.css
+++ b/style.css
@@ -25,18 +25,28 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #fff; /* Background color */
+  background-color: #ffffff9e; /* Background color */
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 9999;
-  transition: opacity 0.5s ease-out, visibility 0s 0.5s;
+  z-index: 4;
+  transition: opacity 1s ease-out, visibility 0s 0.5s;
+  background: transparent;
+}
+
+.loader::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-color: #ffffff9e;
+  backdrop-filter: blur(4px); /* Adds blur to the background */
+  z-index: -1;
 }
 
 /* Spinner Animation */
 .spinner {
-  width: 5.5em;
-  height: 5.5em;
+  width: 5em;
+  height: 5em;
   border: 6px solid #f0f0f0;
   border-top: 6px solid #b05c3c; /* Accent color */
   border-radius: 50%;
