--- a/style.css
+++ b/style.css
@@ -326,23 +326,27 @@ li {
   align-items: center;
   box-shadow: 1px 1px 4px grey;
   img {
-    width: 4em;
+    width: 3.5em;
     max-width: 100%;
-    height: 3em;
+    height: 2em;
     border-radius: 10px;
     object-fit: cover;
     object-position: center;
   }
-  p {
-    height: 3em;
+  #cart-name {
+    height: 3.5em;
     width: 8em;
-    font-size: 0.7em;
+    font-size: .7em;
+  }
+  #cart-price {
+    font-weight: 600;
   }
 }
 
 .cart-items-flex {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .cart-control-container {
@@ -736,13 +740,15 @@ li {
   margin-right: 0.5em;
 }
 
-.menu-btn {
-  all: unset;
-  background-color: #cfcbcb;
-  font-size: 1.3em;
-  padding: 0.5em;
-  border-radius: 24px;
-  text-align: center;
+.services-btn {
+  width: 100px;
+  border: none;
+  background-color: #9ed5f2;
+  display: inline-block;
+  padding: 0.4em 0;
+  font-size: 1em;
+  border-radius: 14px;
+  box-shadow: 2px 2px 8px #cfcbcb;
 }
 
 .chef-area-wrapper {
